--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 /node_modules
 /public/hot
 /public/storage
+/public/vendor
 /storage/*.key
+/storage/debugbar
 /vendor
 .env
 .phpunit.result.cache
@@ -17,3 +19,4 @@ after.sh
 .editorconfig
 public/packages/
 _TODO/
+data/*
