--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,12 @@
         "laravel"
     ],
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/adamwathan/laravel-preset"
+        }
+    ],
     "require": {
         "php": "^7.1.3",
         "adldap2/adldap2-laravel": "^5.1",
@@ -23,6 +29,7 @@
         "spatie/laravel-backup": "^5.12"
     },
     "require-dev": {
+        "adamwathan/laravel-preset": "dev-master",
         "barryvdh/laravel-debugbar": "^3.2",
         "barryvdh/laravel-ide-helper": "^2.5",
         "beyondcode/laravel-dump-server": "^1.0",
