php artisan preset nothingworks results

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,18 @@
 /node_modules
 /public/hot
 /public/storage
-/public/vendor
+/public/build
+/public/css
+/public/js
+/public/mix-manifest.json
 /storage/*.key
-/storage/debugbar
 /vendor
-.env
-.phpunit.result.cache
+/.idea
+/data
+/.vscode
+/.vagrant
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-yarn.lock
-aliases
-.vagrant/
-after.sh
-.idea/
-.editorconfig
-public/packages/
-_TODO/
-data/*
-.phpstorm.meta.php
+.env
