--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,11 @@
         "barryvdh/elfinder-flysystem-driver": "^0.2.1",
         "barryvdh/laravel-elfinder": "^0.4.1",
         "fideloper/proxy": "^4.0",
-        "infyomlabs/adminlte-templates": "dev-master",
-        "infyomlabs/laravel-generator": "dev-master",
-        "laravel/framework": "5.7.*",
+        "doctrine/dbal": "~2.3",
+        "infyomlabs/laravel-generator": "5.8.x-dev",
+        "laravelcollective/html": "^5.8.0",
+        "infyomlabs/adminlte-templates": "5.8.x-dev",
+        "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "league/climate": "^3.5",
         "spatie/dns": "^1.4",
